--- a/web-booking-react/package.json
+++ b/web-booking-react/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "lodash": "^4.17.21",
     "ramda": "^0.28.0",
@@ -34,11 +35,12 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
+    "extends":[
+       "react-app",
+       "react-app/jest"
     ]
   },
+  
   "browserslist": {
     "production": [
       ">0.2%",
@@ -52,7 +54,9 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.191",
-    "@types/ramda": "^0.28.23"
+    "@types/ramda": "^0.28.23",
+    "@types/react-router": "^5.1.20"
   }
 }
