--- a/web-booking-react/package.json
+++ b/web-booking-react/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.60.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -35,12 +36,11 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends":[
-       "react-app",
-       "react-app/jest"
+    "extends": [
+      "react-app",
+      "react-app/jest"
     ]
   },
-  
   "browserslist": {
     "production": [
       ">0.2%",
@@ -57,6 +57,8 @@
     "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.191",
     "@types/ramda": "^0.28.23",
-    "@types/react-router": "^5.1.20"
+    "@types/react-router": "^5.1.20",
+    "tslint": "^6.1.3",
+    "tslint-react": "^5.0.0"
   }
 }
