--- a/Backend/Booking/src/main/resources/application.yaml
+++ b/Backend/Booking/src/main/resources/application.yaml
@@ -1,5 +1,8 @@
 server:
   port: 8082
+  servlet:
+    session:
+      timeout: 30m
 
 springdoc:
   swagger-ui:
@@ -19,3 +22,10 @@ spring:
         show_sql: false
         temp:
           use_jdbc_metadata_defaults: false
+    hibernate:
+      ddl-auto: update
+  session:
+    store-type: jdbc
+    jdbc:
+      initialize-schema: always
+      table-name: SPRING_SESSION
