Обработка запросов со стороны клиента для витрины

--- a/Backend/Booking/src/main/resources/application.yaml
+++ b/Backend/Booking/src/main/resources/application.yaml
@@ -3,6 +3,9 @@ server:
   servlet:
     session:
       timeout: 5m
+      cookie:
+        same-site: none
+        secure: true
 
 springdoc:
   swagger-ui:
